--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ jar {
                     'Implementation-Title': 'Lemin project',
                     'Implementation-Version': version
     }
+    baseName = 'lemin'
 }
+
 
 sourceSets {
    main {
