added a suite for all the input tests

--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,11 @@ sourceSets {
 		}
 	}
 }
+
+task InputTestSuite(type: Test) {
+   include 'InputTestSuite.class'
+}
+
+test {
+    exclude 'input/InputTestSuite.class'
+}
